# Licenta

./: CMakeLists.txt  README.md
checkpoints/AlexNet_aug_1e-3/: iter_2000_train_0.803_valid_0.731.model  iter_2000_train_0.820_valid_0.736.model  iter_4000_train_0.919_valid_0.933.model  iter_6000_train_0.934_valid_0.940.model
checkpoints/ResNet_aug_1e-3/: iter_4000_train_0.919_valid_0.940.model  iter_6000_train_0.933_valid_0.959.model
cpu/: CMakeLists.txt
cpu/checkpoints/AlexNet_aug_1e-3/: iter_10000_train_0.956_valid_0.966.model  iter_15000_train_0.969_valid_0.973.model  iter_2000_train_0.800_valid_0.528.model  iter_2000_train_0.876_valid_0.682.model  iter_4000_train_0.902_valid_0.746.model  iter_4000_train_0.927_valid_0.841.model  iter_6000_train_0.924_valid_0.816.model  iter_6000_train_0.936_valid_0.844.model
cpu/include/: architectures.h  data_format.h  func.h  metrics.h  pipeline.h
cpu/src/: alexnet.cpp  architectures.cpp  camera.cpp  cnn.cpp  conv2d.cpp  func.cpp  inference.cpp  metrics.cpp  pipeline.cpp  relu.cpp
include/: architectures.h
src/: batchnorm2d.cpp  camera.cpp  cnn.cpp  data_format.cpp  dropout.cpp  inference.cpp  linear.cpp  pipeline.cpp  pool2d.cpp  resnet.cpp  run.bat  run_cnn.bat
